--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav>
     <a href="/">Fitness Tracker</a>
-    <a href="/stats">Dashboard</a>
+    <a id="link-dashboard" href="/stats">Dashboard</a>
   </nav>
   <div class="wrapper workout">
     <header>
